# TorusView

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  vim.makefile
torusview/: CMakeLists.txt  camera.cpp  camera.h  geometry.cpp  geometry.h  main.cpp  save_image.h  shader.cpp  shader.h  source_dir.h  textures.cpp  textures.h
torusview/shaders/: shader.fs  shader.vs
torusview/textures/: identipoly1.xcf  identipoly2.xcf  z_2_1.xcf
